Mejorando el Footer

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
   "info":"Select the category",
   "book":"BOOK",
   "Play":"PLAY",
-  "PAY":"PAY",
+  "News":"NEWS",
   "Info2":"Leave a comment",
   "InfoF":"FOLLOW US ON",
   "InfoF2": "START OF SECTION",
