--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -5,7 +5,7 @@
   "info":"Seleccione la categoria",
   "book":"LIBRO",
   "Play":"JUEGO",
-  "PAY":"PAGO",
+  "News":"NOTICIAS",
   "Info2":"Deja un Comentario",
   "InfoF":"SIGUENOS EN",
   "InfoF2": "INICIO DE SECCION",
