--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,7 +5,7 @@
   "info":"Sélectionnez la catégorie",
   "book":"LIVRE",
   "Play":"JOUER",
-  "PAY":"PAYER",
+  "News":"NOUVELLES",
   "Info2":"laissez un commentaire",
   "InfoF":"SUIVEZ-NOUS SUR",
   "InfoF2":"DÉBUT DE SECTION",
