Modificacion footer y nadvar

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,7 @@
   "InfoH2":"MORE INFORMATION",
   "InfoNF":"ERROR 404",
   "InfoNF2":"Page not found",
-  "InfoNF3":"Go to Home"
-
+  "InfoNF3":"Go to Home",
+  "Multimedia":"Multimedia",
+  "Foro":"Forum"
 }
