--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -15,6 +15,7 @@
   "InfoH2":"MÁS INFORMACIÓN",
   "InfoNF":"ERROR 404",
   "InfoNF2":"Página no encontrada",
-  "InfoNF3":"Ir a Inicio"
-
+  "InfoNF3":"Ir a Inicio",
+  "Multimedia": "multimedia",
+  "Foro":"Foro"
 }
