--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -15,6 +15,7 @@
   "InfoH2":"PLUS D'INFORMATIONS",
   "InfoNF":"ERREUR 404",
   "InfoNF2":"Page non trouvée",
-  "InfoNF3":"Aller à la maison"
-
+  "InfoNF3":"Aller à la maison",
+  "Multimedia": "multimédia",
+  "Foro":"Forum"
 }
